# foodandfriends

./: .gitignore
.cursor/rules/: rules.mdc
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  bookings.py  festival.py
backend/app/api/admin/: __init__.py
backend/app/api/users/: __init__.py
backend/app/core/: config.py  database.py
backend/app/models/: booking.py  day.py  festival.py  user.py
backend/app/services/: auth.py  email.py
backend/app/templates/emails/: base_template.html  booking_cancellation.html  booking_confirmation.html  booking_update.html
backend/scripts/: populate_database.py
docs/: plan.md  project.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: GoogleLogin.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: auth.ts  bookings.ts  config.ts
frontend/src/pages/: About.tsx  Admin.tsx  BookingPage.tsx  Login.tsx  Profile.tsx
