[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.2",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.2",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.13.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
